samples/_failures_safe/1761633146_965d1e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0e74e938.c: In function ‘main’:
./samples/SAFE/__tmp_0e74e938.c:151:9: error: expected declaration or statement at end of input
  151 |         input[len - 1] = '\0';
      |         ^~~~~
./samples/SAFE/__tmp_0e74e938.c:151:9: error: expected declaration or statement at end of input
